--- a/user/3/index.html
+++ b/user/3/index.html
@@ -3,7 +3,7 @@
 	
 </title><Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 <link href="https://rebloxia.github.io/backdrop/ReBLOX.css" type="text/css" rel="stylesheet"><link id="_ctl0_AdaptersInvariantImportCSS" rel="stylesheet" href="https://rebloxia.github.io/backdrop/Import.css" type="text/css">
-	<link href="https://rebloxia.github.io/backdrop/Frontpage.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Inbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Message.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/ReBLOX(1).css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Toolbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/User.css" type="text/css" rel="stylesheet"></head>
+	<link href="https://rebloxia.github.io/backdrop/Frontpage.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Inbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Message.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/ReBLOX(1).css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Toolbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop.css" type="text/css" rel="stylesheet"></head>
 		<form name="aspnetForm" method="post" action="login" id="aspnetForm">
 
 		<Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
@@ -21,7 +21,7 @@
 		</div>
 			</div>
 			
-			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal"><a style="color:white;" href="https://rebloxia.github.io/">Home</a>  |  <a style="color:white;" href="https://rebloxia.github.io/games/">Games</a>  |  <a style="color:white;" href="https://rebloxia.github.io/user/">Browse</a>  |  <a style="color:white;" href="https://discord.gg/zsa8aF6">Discord</a>  |  <a style="color:white;" href="https://rebloxia.github.io/info">Info</a></h1><h1>
+			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal"><a style="color:white;" href="https://rebloxia.github.io/">Home</a>  |  <a style="color:white;" href="https://rebloxia.github.io/games/">Games</a>  |  <a style="color:white;" href="https://rebloxia.github.io/">Browse</a>  |  <a style="color:white;" href="https://discord.gg/zsa8aF6">Discord</a>  |  <a style="color:white;" href="https://rebloxia.github.io/info">Info</a></h1><h1>
 		</h1></div>
 				<p> <p>
 
@@ -31,7 +31,7 @@
 				<div style="background-color:#B0C4DE;border:1px solid black;">
 					<center><p style="font-size:16">mason shull</p></center>
 					<p ><font color="grey">[ Offline ]</font><p>
-					<img src="backdrop/shull.png">
+					<img src="https://rebloxia.github.io/backdrop/shull.png">
 			<p> <p>
 			<p><font color="blue">Send Message</font></a>
 			<p> <p>
