--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ aspnetForm._ctl0_ContentPlaceHolder1_Login1_UserName.focus();
 			<div class="Friend">
 				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="txarrak" href="" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/txarrakthumbnail.jpg" border="0"></a></div>
 				<div class="Summary">
-					<a style="font-size:12px" href="https://rebloxia.github.io/user/1">txarrak</a></a></span>
+					<a style="font-size:12px" href="https://rebloxia.github.io/user/1">txarrak</a></span>
 
 				</div>
 			</div>
@@ -166,7 +166,7 @@ aspnetForm._ctl0_ContentPlaceHolder1_Login1_UserName.focus();
 			<div class="Friend">
 				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="goom" href="" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/goomythumbnail.jpg" border="0"></a></div>
 				<div class="Summary">
-					<a style="font-size:12px" href="https://rebloxia.github.io/user/7">goom</a></a></span>
+					<a style="font-size:12px" href="https://rebloxia.github.io/user/7">goom</a></span>
 
 				</div>
 			</div>
