--- a/user/6/index.html
+++ b/user/6/index.html
@@ -31,7 +31,7 @@
 				<div style="background-color:#B0C4DE;border:1px solid black;">
 					<center><p style="font-size:16">mecha</p></center>
 					<p ><font color="grey">[ Offline ]</font><p>
-					<img src="https://rebloxia.github.io/backdrop/default.png">
+					<img src="https://rebloxia.github.io/backdrop/Figure8.png">
 			<p> <p>
 			<p><font color="blue">Send Message</font></a>
 			<p> <p>
