--- a/user/8/index.html
+++ b/user/8/index.html
@@ -31,7 +31,7 @@
 				<div style="background-color:#B0C4DE;border:1px solid black;">
 					<center><p style="font-size:16">cole</p></center>
 					<p ><font color="grey">[ Offline ]</font><p>
-					<img src="https://rebloxia.github.io/backdrop/goomy.png">
+					<img src="https://rebloxia.github.io/backdrop/ColeFigure.png">
 			<p> <p>
 			<p><font color="blue">Send Message</font></a>
 			<p> <p>
