--- a/browse/index.html
+++ b/browse/index.html
@@ -37,7 +37,7 @@
 				    <div>
 		<table class="Grid" cellspacing="0" cellpadding="4" border="0" id="ctl00_cphRoblox_gvUsersBrowsed">
 			<tbody><tr class="GridHeader">
-				<th scope="col">Avatar</th><th scope="col"><a href="javascript:__doPostBack(&#39;ctl00$cphRoblox$gvUsersBrowsed&#39;,&#39;Sort$userName&#39;)">Name</a></th><th scope="col">Status</th><th scope="col"><a href="javascript:__doPostBack(&#39;ctl00$cphRoblox$gvUsersBrowsed&#39;,&#39;Sort$lastActivity&#39;)">Location / Last Seen</a></th>
+				<th scope="col">Avatar</th><th scope="col"><a href="javascript:__doPostBack(&#39;ctl00$cphRoblox$gvUsersBrowsed&#39;,&#39;Sort$userName&#39;)">Name</a></th><th scope="col">Status</th><th scope="col">Location / Last Seen</a></th>
 			</tr><tr class="GridItem">
 				<td>
                                    <a id="ctl00_cphRoblox_gvUsersBrowsed_ctl03_hlAvatar" title="robloco" href="https://web.archive.org/web/20080901065547/http://www.roblox.com/User.aspx?ID=133388" style="display:inline-block;cursor:pointer;"><img src="./ROBLOX_ A FREE Virtual World-Building Game with Avatar Chat, 3D Environments, and Physics_files/e2cc2f6b06be787349ac69c46511126d" border="0" alt="robloco"></a>
