--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@
 					</td>
 	</tr><tr>
 		<td>
-						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl1_ContentImage1" title="Join the Discord!" href="https://discord.gg/wU4Y74D" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/g1" border="0"></a>
+						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl1_ContentImage1" title="Join the Discord!" href="https://discord.gg/wU4Y74D" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/g1.png" border="0"></a>
 					</td><td>
-						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl3_ContentImage1" title="Join the Discord!" href="https://discord.gg/wU4Y74D" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/g2" border="0"></a>
+						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl3_ContentImage1" title="Join the Discord!" href="https://discord.gg/wU4Y74D" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/g2.png" border="0"></a>
 					</td><td>
-						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl5_ContentImage1" title="Join the Discord!" href="https://discord.gg/wU4Y74D" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/g3" border="0"></a>
+						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl5_ContentImage1" title="Join the Discord!" href="https://discord.gg/wU4Y74D" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/g3.png" border="0"></a>
 					</td><td>
-						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl7_ContentImage1" title="Join the Discord!" href="https://discord.gg/wU4Y74D" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/g4" border="0"></a>
+						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl7_ContentImage1" title="Join the Discord!" href="https://discord.gg/wU4Y74D" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/g4.png" border="0"></a>
 					</td>
 	</tr>
 	</tr>
