--- a/browse/index.html
+++ b/browse/index.html
@@ -1,6 +1,6 @@
 <title>
 	ReBLOX
-	
+	<link rel="shortcut icon" href="https://rebloxia.github.io/backdrop/icon.ico" />
 </title><Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 <link href="https://rebloxia.github.io/backdrop/ReBLOX.css" type="text/css" rel="stylesheet"><link id="_ctl0_AdaptersInvariantImportCSS" rel="stylesheet" href="https://rebloxia.github.io/backdrop/Import.css" type="text/css">
 	<link href="https://rebloxia.github.io/backdrop/Frontpage.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Inbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Message.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/ReBLOX(1).css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Toolbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop.css" type="text/css" rel="stylesheet"></head>
@@ -37,7 +37,7 @@
 				    <div>
 		<table class="Grid" cellspacing="0" cellpadding="4" border="0" id="ctl00_cphRoblox_gvUsersBrowsed">
 			<tbody><tr class="GridHeader">
-				<th scope="col">Avatar</th><th scope="col"><a href="javascript:__doPostBack(&#39;ctl00$cphRoblox$gvUsersBrowsed&#39;,&#39;Sort$userName&#39;)">Name</a></th><th scope="col">Status</th><th scope="col">Location / Last Seen</a></th>
+				<th scope="col">Avatar</th><th scope="col"><th scope="col">Avatar</th><th scope="col">
 			</tr><tr class="GridItem">
 				<td>
                                    <a id="ctl00_cphRoblox_gvUsersBrowsed_ctl03_hlAvatar" title="robloco" href="https://web.archive.org/web/20080901065547/http://www.roblox.com/User.aspx?ID=133388" style="display:inline-block;cursor:pointer;"><img src="./ROBLOX_ A FREE Virtual World-Building Game with Avatar Chat, 3D Environments, and Physics_files/e2cc2f6b06be787349ac69c46511126d" border="0" alt="robloco"></a>
@@ -45,10 +45,6 @@
 								    <a id="ctl00_cphRoblox_gvUsersBrowsed_ctl03_hlName" href="https://web.archive.org/web/20080901065547/http://www.roblox.com/User.aspx?ID=133388">robloco</a><br>
 								    <span id="ctl00_cphRoblox_gvUsersBrowsed_ctl03_lBlurb">Lv.53,
 ********************************* Respond to your well written messages (√) ********************************* Accept your Random Friend Request (X) ********************************* Give you something -{Model, T-Shirt, Information}- (√) ********************************* Go to your  advertized noob place (X) ********************************* When I find out where to get music I will finally make some vids!</span>
-							    </td><td>
-								    <span id="ctl00_cphRoblox_gvUsersBrowsed_ctl03_lblUserOnlineStatus">Online</span><br>
-							    </td><td>
-								    <span id="ctl00_cphRoblox_gvUsersBrowsed_ctl03_lblUserLocationOrLastSeen">Website</span>
 							    </td>
 			</tr><tr class="GridItem">
 				
