--- a/login/index.html
+++ b/login/index.html
@@ -1,7 +1,7 @@
 <title>
 	ReBLOX
-	<link rel="shortcut icon" href="https://rebloxia.github.io/backdrop/icon.ico" />
-</title><link |="" rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
+	
+</title><link rel="shortcut icon" href="https://rebloxia.github.io/backdrop/icon.ico" /><link |="" rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 <link href="https://rebloxia.github.io/backdrop/ReBLOX.css" type="text/css" rel="stylesheet"><link id="_ctl0_AdaptersInvariantImportCSS" rel="stylesheet" href="https://rebloxia.github.io/backdrop/Import.css" type="text/css">
 	<link href="https://rebloxia.github.io/backdrop/Frontpage.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Inbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Message.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/ReBLOX(1).css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Toolbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop.css" type="text/css" rel="stylesheet"></head>
 		<body><form name="aspnetForm" method="post" action="login" id="aspnetForm">
