--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@
 	<tbody><tr>
 		<td>
 			<div class="Friend">
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="txarrak" href="" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/txarrakthumbnail.jpg" border="0"></a></div>
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="txarrak" href="" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/ColeFigureT.png" border="0"></a></div>
 				<div class="Summary">
-					<a style="font-size:12px" href="https://rebloxia.github.io/user/1">txarrak</a></span>
+					<a style="font-size:12px" href="https://rebloxia.github.io/user/8/">cole</a></span>
 
 				</div>
 			</div>
 		</td><td>
 			<div class="Friend">
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="goom" href="" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/goomythumbnail.jpg" border="0"></a></div>
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="goom" href="" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/Figure8T.png" border="0"></a></div>
 				<div class="Summary">
-					<a style="font-size:12px" href="https://rebloxia.github.io/user/7">goom</a></span>
+					<a style="font-size:12px" href="https://rebloxia.github.io/user/6/">mecha</a></span>
 
 				</div>
 			</div>
