--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 							<td><a id="_ctl0_ContentPlaceHolder1_HyperLink4" href="games/index.html"><img src="https://rebloxia.github.io/backdrop/play.png" alt="Multiplayer Games" border="0"></a></td>
 						</tr>
 						<tr>
-							<td colspan="2"><a id="_ctl0_ContentPlaceHolder1_HyperLink1" href="games/index.html"><img src="https://rebloxia.github.io/backdrop/AdventureAwaits.png" alt="Multiplayer Games" border="0"></a></td>
+							<td colspan="2"> &nbsp; <iframe width="435" height="326" src="https://www.youtube.com/embed/LTnMKjXEnMY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</iframe></a></td>
 						</tr>
 					</tbody></table>
 				</div>
@@ -123,7 +124,6 @@
 		<tbody><tr>
 			<td class="Title">
 							Associates
-							<br><br>
 						</td>
 		</tr><tr>
 			<td align="center">
@@ -134,12 +134,11 @@
 				</tr><tr>
 			<td align="center">
 			<a href="http://niggerblox.cf/">
-<img border="0" alt="niggaBLOCKS" src="https://rebloxia.github.io/backdrop/nb.png" width="100" height="87">
-							<p>&nbsp;</p>
+<img border="0" alt="niggaBLOCKS" src="https://rebloxia.github.io/backdrop/nb.png" width="100" height="87"><img border="0" alt="niggaBLOCKS" src="https://rebloxia.github.io/backdrop/funny.png" width="100" height="87">
 						</td><tr>
 			<td align="center">
 			<img src="https://rebloxia.github.io/backdrop/funstuff.png" alt="funny face">
-					
+												<p>&nbsp;</p>
 						</td>
 		</tr><tr>
 						</td>
@@ -184,7 +183,7 @@
 				<table id="_ctl0_ContentPlaceHolder1_DataListCoolPlace" cellspacing="0" cellpadding="8" border="0" height="100%" width="100%">
 	<tbody><tr>
 		<td colspan="4" class="Title">
-						<center>Cool Places</center>
+						<center>Gallery</center>
 					</td>
 	</tr><tr>
 		<td>
