--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </title><link rel="shortcut icon" href="https://rebloxia.github.io/backdrop/icon.ico" /><Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 <link href="https://rebloxia.github.io/backdrop/ReBLOX.css" type="text/css" rel="stylesheet"><link id="_ctl0_AdaptersInvariantImportCSS" rel="stylesheet" href="https://rebloxia.github.io/backdrop/Import.css" type="text/css">
 	<link href="https://rebloxia.github.io/backdrop/Frontpage.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Inbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Message.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/ReBLOX(1).css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Toolbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop.css" type="text/css" rel="stylesheet"></head>
-		<form name="aspnetForm" method="post" action="login" id="aspnetForm">
+		<form name="aspnetForm" method="post" action="login/" id="aspnetForm">
 
 		<Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 	</head>
@@ -48,7 +48,7 @@
 	<tbody><tr>
 		<td align="right">Username or E-mail:</td>
 		<td width="140">
-			<input name="_ctl0:ContentPlaceHolder1:Login1:UserName" type="text" id="_ctl0_ContentPlaceHolder1_Login1_UserName"></td>
+			<input name="_ctl0:ContentPlaceHolder1:login/1:UserName" type="text" id="_ctl0_ContentPlaceHolder1_login/1_UserName"></td>
 		<td>
 			
 			</td>
@@ -56,7 +56,7 @@
 	<tr>
 		<td align="right">Password:</td>
 		<td width="140">
-			<input name="_ctl0:ContentPlaceHolder1:Login1:UserPass" type="password" id="_ctl0_ContentPlaceHolder1_Login1_UserPass"></td>
+			<input name="_ctl0:ContentPlaceHolder1:login/1:UserPass" type="password" id="_ctl0_ContentPlaceHolder1_login/1_UserPass"></td>
 		<td>
 			
 			</td>
@@ -70,17 +70,17 @@
 	<tr>
 	<td></td>
 		<td nowrap="" align="center" colspan="1">
-			<input type="submit" name="_ctl0:ContentPlaceHolder1:Login1:LoginBtn" value="Log In" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;_ctl0:ContentPlaceHolder1:Login1:LoginBtn&quot;, &quot;&quot;, true, &quot;&quot;, &quot;&quot;, false, false))" language="javascript" id="_ctl0_ContentPlaceHolder1_Login1_LoginBtn" class="LogInButton">&nbsp;
-			<input type="submit" name="_ctl0:ContentPlaceHolder1:Login1:Button1" value="Sign Up!" id="_ctl0_ContentPlaceHolder1_Login1_Button1" class="SignUpButton"></td>
+			<input type="submit"  value="Log In" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;_ctl0:ContentPlaceHolder1:login/1:login/Btn&quot;, &quot;&quot;, true, &quot;&quot;, &quot;&quot;, false, false))" language="javascript" id="_ctl0_ContentPlaceHolder1_login/1_login/Btn" class="loginButton">&nbsp;
+			<input type="submit"  value="Sign Up!" id="_ctl0_ContentPlaceHolder1_login/1_Button1" class="SignUpButton"></td>
 		<td></td>
 	</tr>
 	<tr>
 		<td></td>
 		<td width="140">
-			<a style="font-size:12px" href="https://rebloxia.github.io/login/"><u>Reset password</u></a></td>
+			<a style="font-size:12px" href="https://rebloxia.github.io/login//"><u>Reset password</u></a></td>
 		<td>
 			
-			<input name="_ctl0:ContentPlaceHolder1:Login1:hiddenEmail" type="hidden" id="_ctl0_ContentPlaceHolder1_Login1_hiddenEmail" value="An email with instructions has been sent to {0}"></td>
+			<input name="_ctl0:ContentPlaceHolder1:login/1:hiddenEmail" type="hidden" id="_ctl0_ContentPlaceHolder1_login/1_hiddenEmail" value="An email with instructions has been sent to {0}"></td>
 	</tr>
 </tbody></table>
 <script for="window" event="onload">
@@ -134,7 +134,7 @@
 				</tr><tr>
 			<td align="center">
 			<a href="http://niggerblox.cf/">
-<img border="0" alt="niggaBLOCKS" src="https://rebloxia.github.io/backdrop/nb.png" width="100" height="87"><img border="0" alt="niggaBLOCKS" src="https://rebloxia.github.io/backdrop/funny.png" width="100" height="87">
+<img border="0" alt="niggaBLOCKS" src="https://rebloxia.github.io/backdrop/nb.png" width="100" height="87"><img border="0" alt="funny man.." src="https://rebloxia.github.io/backdrop/funny.png" width="100" height="87">
 						</td><tr>
 			<td align="center">
 			<img src="https://rebloxia.github.io/backdrop/funstuff.png" alt="funny face">
